--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -1,3 +1,76 @@
+/* primary navigation
+--------------------------------------------------------------------- */
+#nav-wrap ul,
+#nav-wrap li,
+#nav-wrap a {
+  margin: 0;
+  padding: 0;
+  border: none;
+  outline: none;
+}
+
+/* nav-wrap */
+#nav-wrap {
+  font: 14px "opensans-bold", sans-serif;
+  width: 100%;
+  text-transform: uppercase;
+  letter-spacing: 2.5px;
+  margin: 0 auto;
+  z-index: 100;
+  position: fixed;
+  left: 0;
+  top: 0;
+}
+.opaque {
+  background-color: #333;
+}
+
+/* hide toggle button */
+#nav-wrap > a.mobile-btn {
+  display: none;
+}
+
+ul#nav {
+  display: flex;
+  justify-content: center;
+  min-height: 48px;
+  width: auto;
+  z-index: 100;
+}
+ul#nav li {
+  position: relative;
+  list-style: none;
+  height: 48px;
+  display: inline-block;
+  z-index: 100;
+}
+
+/* Links */
+ul#nav li a {
+  display: inline-block;
+  padding: 8px 13px;
+  line-height: 32px;
+  text-decoration: none;
+  text-align: left;
+  color: #fff;
+
+  -webkit-transition: color 0.2s ease-in-out;
+  -moz-transition: color 0.2s ease-in-out;
+  -o-transition: color 0.2s ease-in-out;
+  -ms-transition: color 0.2s ease-in-out;
+  transition: color 0.2s ease-in-out;
+}
+
+ul#nav li a:active {
+  background-color: transparent !important;
+}
+/* ul#nav li.current a {
+  color: #f06000;
+} */
+/* ------------------------------------------------------------------ */
+/* b. Header Styles
+/* ------------------------------------------------------------------ */
+
 header {
   position: relative;
   height: 800px;
@@ -97,93 +170,46 @@ header .scrolldown a {
 header .scrolldown a:hover {
   color: #11abb0;
 }
-
-/* primary navigation
---------------------------------------------------------------------- */
-#nav-wrap ul,
-#nav-wrap li,
-#nav-wrap a {
-  margin: 0;
-  padding: 0;
-  border: none;
-  outline: none;
-}
-
-/* nav-wrap */
-#nav-wrap {
-  font: 12px "opensans-bold", sans-serif;
-  width: 100%;
-  text-transform: uppercase;
-  letter-spacing: 2.5px;
-  margin: 0 auto;
-  z-index: 100;
-  position: fixed;
-  left: 0;
-  top: 0;
-}
-.opaque {
-  background-color: #333;
-}
-
-ul#nav {
-  min-height: 48px;
-  width: auto;
-
-  /* center align the menu */
-  text-align: center;
-}
-ul#nav li {
-  position: relative;
-  list-style: none;
-  height: 48px;
-  display: inline-block;
-}
-
-/* Links */
-ul#nav li a {
-  /* 8px padding top + 8px padding bottom + 32px line-height = 48px */
-
-  display: inline-block;
-  padding: 8px 13px;
-  line-height: 32px;
-  text-decoration: none;
-  text-align: center;
-  color: #fff;
-
-  -webkit-transition: color 0.2s ease-in-out;
-  -moz-transition: color 0.2s ease-in-out;
-  -o-transition: color 0.2s ease-in-out;
-  -ms-transition: color 0.2s ease-in-out;
-  transition: color 0.2s ease-in-out;
-}
-
-ul#nav li a:active {
-  background-color: transparent !important;
-}
-ul#nav li.current a {
-  color: #f06000;
-}
-
-/* Media Queries */
 @media only screen and (max-width: 900px) {
-  .intro h1 {
+  /* header styles
+ ------------------------------------------------------------------ */
+  header .banner {
+    padding-bottom: 12px;
+  }
+  header .banner-text h1 {
     font: 78px/1.1em "opensans-bold", sans-serif;
     letter-spacing: -1px;
   }
-  .intro h3 {
+  header .banner-text h3 {
     font: 17px/1.9em "librebaskerville-regular", serif;
     width: 80%;
   }
+  header .banner-text hr {
+    width: 65%;
+    margin: 12px auto;
+  }
+  /* nav-wrap */
+  #nav-wrap {
+    font: 11px "opensans-bold", sans-serif;
+    letter-spacing: 1.5px;
+  }
 }
 
-/*mobile or tablet version*/
 @media only screen and (max-width: 767px) {
-  .intro h1 {
-    font: 68px/1.1em "opensans-bold", sans-serif;
+  header .banner {
+    padding-bottom: 12px;
+    padding-top: 6px;
   }
-  .intro h3 {
+  header .banner-text h1 {
+    font: 36px/1.1em "opensans-bold", sans-serif;
+  }
+  header .banner-text h3 {
     font: 16px/1.9em "librebaskerville-regular", serif;
     width: 85%;
+  }
+  header .banner-text hr {
+    width: 80%;
+    margin: 18px auto;
   }
 
   /* header social links */
